# ocaml-polars

./: .gitignore  .ocamlformat  Cargo.toml  README.md  default.nix  dune-project  flake.nix  polars.opam  rust-toolchain.toml
nix/: default.nix  ocaml.nix  shell.nix
src/: Cargo.toml  any_bigarray.ml  any_bigarray.mli  blocking_section.rs  dune  gen_bindings.sh  lazy.rs  lib.rs  polars.ml  polars.mli  polars0.ml  polars0.rs  polars_lazy.ml  rust_to_ocaml.toml  series_bigarray.rs  types.ml  types.rs
test/: dune  polars_lazy_test.ml  polars_test.ml  polars_testdata.ml  polars_testing.ml  trades-1.csv  trades-2.csv
